--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="EJK-8W-XfU" id="wsP-gy-zwG"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="Ry0-ef-eHy" userLabel="Todoey"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="Ry0-ef-eHy" userLabel="Todoey">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="fr8-Vo-8ci">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="EJK-8W-XfU" id="qba-GB-CWr"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ntk-Zp-zj7" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
